# Klampt

./: .gitignore  .gitmodules  .travis.yml  .travis_conditional.sh  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.config.tmpl  Makefile.config.ubuntu  Makefile.template  README.md  build  build-test  doxygen.conf  doxygen.conf.in  log4cxx.xml  run-docker-klampt-server  update.sh  winpackage.bat
Cpp/Main/: CMakeLists.txt  ResourceBrowserProgram.h  RobotViewProgram.h  SimViewProgram.h  WorldViewProgram.h  merge.cpp  motorcalibrate.cpp  motorcalibrate.h  pack.cpp  pose.cpp  simtest.cpp  simutil.cpp  test.cpp  trajopt.cpp  urdftorob.cpp
Examples/: CMakeLists.txt  Makefile  baxter-sensed.path  cartpole.cpp  contactplan.cpp  dynamicplandemo.cpp  motorcalibrate_baxter.settings  multicontactplan.cpp  plandemo.cpp  realtimeplanning.cpp  safeserialclient.cpp  usertrials.cpp  usertrials_serial.cpp
Examples/ContactPlan/: hubo_sway.configs  hubo_sway.stance  hubo_sway_nocontacts.stance
Examples/MotorCalibrateBaxter/: baxter-ref.path  baxter-sensed.path  motorcalibrate_baxter.settings
Examples/PlanDemo/: baxter-pretzel.configs  baxter-pretzel2.configs  lazy_prmstar_planner.settings  restart_rrt_shortcut_planner.settings  rrt_planner.settings  sbl_planner.settings  sbl_shortcut_planner.settings  tx90shelves.configs
Main/: .gitignore  CMakeLists.txt  Makefile  ResourceBrowserProgram.h  RobotViewProgram.h  SimViewProgram.h  WorldViewProgram.h  cartpole.cpp  merge.cpp  motorcalibrate.cpp  motorcalibrate.h  pack.cpp  pose.cpp  safeserialclient.cpp  simtest.cpp  simutil.cpp  test.cpp  trajopt.cpp  urdftorob.cpp  urdftorob.h  usertrials.cpp
Main/KlamptQt/: GLScreenshotPlugin.h  KlamptQt.pro  common.pri  icons.qrc  qklamptdisplay.cpp  qklamptdisplay.h  qklamptguibase.cpp  qklamptguibase.h  qtbackendbase.cpp  qtbackendbase.h  qtguibase.cpp  qtguibase.h
Main/MotorCalibrateQt/: CMakeLists.txt  MotorCalibrate.pro  dialog.cpp  dialog.h  dialog.ui  main.cpp  moc_motorcalibrate.cpp  moc_wizardpage.cpp  showtext.cpp  showtext.h  showtext.ui
Main/RobotPoseQt/: .gitignore  CMakeLists.txt  RobotPose.pro  collisionoutput.ui  configsframe.cpp  configsframe.ui  floatarrayframe.cpp  floatarrayframe.ui  holdframe.h  holdframe.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pathframe.cpp  pathframe.h  pathframe.ui  playresourceframe.cpp  playresourceframe.h  playresourceframe.ui  qresourcetreeitem.cpp  qresourcetreeitem.h  qresourcetreewidget.cpp  qresourcetreewidget.h  qrobotposebackend.cpp  qrobotposebackend.h  qrobotposegui.cpp  qrobotposegui.h  qrobottestbackend.cpp  qrobottestbackend.h  qrobottestguibase.h  qsimtestbackend.cpp  resourcedock.ui  resourceframe.cpp  resourceframe.h  resourceframe.ui  resourcemanager.cpp  resourcemanager.h  stanceframe.cpp  stanceframe.h  (+3 more)
Main/RobotTestQt/: CMakeLists.txt  RobotTest.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrobottestbackend.h  qrobottestgui.cpp  qrobottestgui.h  qrobottestguibase.cpp
Main/SimTestQt/: .gitignore  CMakeLists.txt  SimTest.pro  connectserial.cpp  connectserial.h  connectserial.ui  controllercommanddialog.ui  controllerdialog.cpp  controllerdialog.h  controllerdialog.ui  controllersettings.h  driveredit.cpp  logoptions.cpp  logoptions.h  logoptions.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qsimtestbackend.cpp  qsimtestbackend.h  qsimtestgui.cpp  qsimtestgui.h  simtest_default.settings
Main/URDFtoRobQt/: CMakeLists.txt  URDFtoRob.pro  dialog.cpp  dialog.ui  main.cpp
Python/: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  check_mac_universal.py  make_deps_linux.sh  make_deps_linux_aarch64.sh  make_deps_macos.sh  patch_a_pip_install.py  pyproject.toml  requirements.txt  setup.py  setup.py.in  simtest.py
Python/control/: MotionModel.py  OperationalSpaceController.py  adaptive_controller.py  balance_controller.py  baxterserialrelay.py  controller.py  estimators.py  ff_torque_trajectory_controller.py  ffserialcontroller.py  leastsq_bounds.py  online_leastsq.py  robotinfo.py  rosbaxtercontroller.py  roscontroller.py  rosdrccontroller.py  rosserialrelay.py  serialcontroller.py  trajectory_controller.py  upperbody_opspace.py  wiggle_controller.py
Python/control-examples/: MotionModel.py  OperationalSpaceController.py  baxterserialrelay.py  leastsq_bounds.py  online_leastsq.py  rosbaxtercontroller.py  rosserialrelay.py  system_id.py
Python/demos/: .gitignore  cartesiantest.py  gl_vis.py  gl_vis_widgets.py  gltemplate.py  gltest.py  kbdrive.py  mouse_capture.py  mousetest.py  optimizetest.py  path_test.py  pathtest.py  planning_test.py  planningtest.py  pointcloudtest.py  resource_demo.py  resourcetest.py  robotiq.py  robotiq.xml  robotiq_test.py  robotiqtest.py  ros_point_cloud_show.py  sensor_test.py  sensortest.py  simlog.py  simtest.py  sphero.py  stabilitytest.py  subrobottest.py  test.py  trajectory_test.py  trajectorytest.py  vis_template.py  visplugin.py  vistemplate.py  widgets.py
Python/docs/: .gitignore  Makefile  requirements.txt  rtd_layout_fix.html
Python/klampt/: .gitignore  Makefile  README.txt  __init__.py  batch.py  camera.py  collide.py  contact.py  contactcspace.py  coordinates.py  cspace.py  cspaceutils.py  doxygen.conf  glcommon.py  gldraw.py  glprogram.py  glrobotprogram.py  hold.py  ik.py  loader.py  map.py  motionplanning.py  multipath.py  qtprogram.py  resource.py  robotcollide.py  robotcspace.py  robotplanning.py  robotsim.py  rootfind.py  se3.py  setup.py  simlog.py  simulation.py  so2.py  so3.py  trajectory.py  visualization.py  webrobotprogram.py
Python/testing/: cartesiantest.py  manyworldtest.py  multiwindowtest.py  optimizetest.py  sensor_matplotlib.py  settletest.py  showafterdialogtest.py  stabilitytest.py
Python/utils/: config_to_driver_trajectory.py  contact_log_to_stances.py  csv_to_linear_path.py  csvmerge.py  discretize_path.py  driver_to_config_trajectory.py  make_planar_rob.py  makethumbnails.py  tri2off.py  (+7 more)
tests/: CMakeLists.txt  test_ODERigidObject.cpp  test_math_so3.py  test_robotsim.py  test_robotsim_getstatus.py  test_types.py
(+2438 files in other folders)
