[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy>=2.0.0rc1; python_version>='3.9'",
    "numpy>=1.18.5; python_version<'3.9'"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
gui = [
    "PyOpenGL",
    "PyQt6",
    "pyqtgraph",
    "pillow"
    "imageio"
]

[tool.cibuildwheel.macos]
repair-wheel-command = [
  "DYLD_LIBRARY_PATH=/usr/local/lib delocate-listdeps {wheel}",
  "DYLD_LIBRARY_PATH=/usr/local/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --exclude libGLX.so.0 --exclude libGLdispatch.so.0 --exclude libOpenGL.so.0 -w {dest_dir} {wheel}"
