[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy>=2.0.0rc1; python_version>='3.9'",
    "numpy>=1.18.5; python_version<'3.9'"
]
build-backend = "setuptools.build_meta"

[project]
name = 'Klampt'
version = '0.10.0'
dependencies = [
    "numpy"
]

[project.optional-dependencies]
gui = [
    "PyOpenGL",
    "PyQt6",
    "pyqtgraph",
    "pillow",
    "imageio"
]
